syntax = "proto3";

package game;

option go_package = "./game";

service Game {
  rpc CreatePlayer(CreatePlayerRequest) returns (CreatePlayerResponse) {}

  rpc MovePlayer(MovePlayerRequest) returns (MovePlayerResponse) {}

  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse) {}
}

message Coordinates {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

message Player {
  string id = 1;
  string name = 2;
  Coordinates location = 3;
}

message Location {
  string id = 1;
  string description = 2;
  repeated string items = 3;
  repeated string npcs = 4;
}

message CreatePlayerRequest {
  string name = 1;
}

message CreatePlayerResponse {
  Player player = 1;
}

message MovePlayerRequest {
  string player_id = 1;
  Coordinates new_location = 2;
}

message MovePlayerResponse {}

message GetLocationRequest {
  Coordinates coordinates = 1;
}

message GetLocationResponse {
  Location location = 1;
}
